--- a/handlebars-java7/pom.xml
+++ b/handlebars-java7/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
-		<groupId>com.github.jknack</groupId>
+		<groupId>com.aperto</groupId>
 		<artifactId>handlebars.java</artifactId>
 		<version>2.2.3-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.github.jknack</groupId>
+	<groupId>com.aperto</groupId>
 	<artifactId>handlebars-java7</artifactId>
 
 	<name>Java 7 support</name>
