--- a/handlebars-maven-plugin-tests/pom.xml
+++ b/handlebars-maven-plugin-tests/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
-    <groupId>com.github.jknack</groupId>
+    <groupId>com.aperto</groupId>
     <artifactId>handlebars.java</artifactId>
     <version>2.2.3-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.jknack</groupId>
+  <groupId>com.aperto</groupId>
   <artifactId>handlebars-maven-plugin-tests</artifactId>
   <packaging>war</packaging>
 
@@ -18,7 +18,7 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>com.github.jknack</groupId>
+        <groupId>com.aperto</groupId>
         <artifactId>handlebars-maven-plugin</artifactId>
         <version>${project.version}</version>
         <executions>
