--- a/handlebars-proto/pom.xml
+++ b/handlebars-proto/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
-    <groupId>com.github.jknack</groupId>
+    <groupId>com.aperto</groupId>
     <artifactId>handlebars.java</artifactId>
     <version>2.2.3-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.jknack</groupId>
+  <groupId>com.aperto</groupId>
   <artifactId>handlebars-proto</artifactId>
 
   <name>A standalone Handlebars Server</name>
@@ -113,25 +113,25 @@
     </dependency>
 
     <dependency>
-      <groupId>com.github.jknack</groupId>
+      <groupId>com.aperto</groupId>
       <artifactId>handlebars</artifactId>
       <version>${project.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>com.github.jknack</groupId>
+      <groupId>com.aperto</groupId>
       <artifactId>handlebars-jackson2</artifactId>
       <version>${project.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>com.github.jknack</groupId>
+      <groupId>com.aperto</groupId>
       <artifactId>handlebars-markdown</artifactId>
       <version>${project.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>com.github.jknack</groupId>
+      <groupId>com.aperto</groupId>
       <artifactId>handlebars-humanize</artifactId>
       <version>${project.version}</version>
     </dependency>
