--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.jknack</groupId>
+  <groupId>com.aperto</groupId>
   <artifactId>handlebars.java</artifactId>
   <version>2.2.3-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -40,25 +40,31 @@
       <name>Edgar Espina</name>
       <url>https://github.com/jknack</url>
     </developer>
+    <developer>
+      <id>aperto</id>
+      <name>Aperto AG Berlin</name>
+      <url>https://github.com/aperto</url>
+    </developer>
   </developers>
 
   <scm>
-    <connection>scm:git:git@github.com:jknack/handlebars.java.git</connection>
-    <developerConnection>scm:git:git@github.com:jknack/handlebars.java.git</developerConnection>
-    <url>scm:git:git@github.com:jknack/handlebars.java.git</url>
+    <connection>scm:git:git@github.com:aperto/handlebars.java.git</connection>
+    <developerConnection>scm:git:git@github.com:aperto/handlebars.java.git</developerConnection>
+    <url>scm:git:git@github.com:aperto/handlebars.java.git</url>
     <tag>HEAD</tag>
+    <!-- branch: aperto_dist -->
   </scm>
 
   <distributionManagement>
     <snapshotRepository>
-      <id>ossrh</id>
-      <name>Sonatype Nexus Snapshots</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+      <id>thirdparty.snapshots</id>
+      <name>Aperto 3rd party snapshots</name>
+      <url>https://maven.aperto.de/nexus/content/repositories/thirdparty.snapshots/</url>
     </snapshotRepository>
     <repository>
-      <id>ossrh</id>
-      <name>Nexus Release Repository</name>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      <id>thirdparty</id>
+      <name>Aperto 3rd party</name>
+      <url>https://maven.aperto.de/nexus/content/repositories/thirdparty/</url>
     </repository>
   </distributionManagement>
 
