Revert "skip this module, because creates problems during deployment to nexus"
This reverts commit f71c28fb801cd665a209d29b77a0b1738a4a5a29.

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -16,7 +16,6 @@
   <description>Integration tests suite</description>
 
   <modules>
-  <!-- this module has a problem on deployment to nexus, because it skips deployment -->
-<!--     <module>handlebars-without-rhino</module> -->
+    <module>handlebars-without-rhino</module>
   </modules>
 </project>
