--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,12 @@
 
   <distributionManagement>
     <snapshotRepository>
-      <id>thirdparty.snapshots</id>
+      <id>aperto.nexus.snapshots</id>
       <name>Aperto 3rd party snapshots</name>
       <url>https://maven.aperto.de/nexus/content/repositories/thirdparty.snapshots/</url>
     </snapshotRepository>
     <repository>
-      <id>thirdparty</id>
+      <id>aperto.nexus.releases</id>
       <name>Aperto 3rd party</name>
       <url>https://maven.aperto.de/nexus/content/repositories/thirdparty/</url>
     </repository>
